--- a/life.html
+++ b/life.html
@@ -105,6 +105,7 @@
 
              // 滚轮触发和按键触发事件
 			$(window).scroll(function(event) {
+				alert()
 				var heg=$(window).scrollTop();
 				var ulheg=$('.content .con').children('ul.a').offset().top;
 				var ulheg1=$('.content .con').children('ul.b').offset().top;
